--- a/src/admin.html
+++ b/src/admin.html
@@ -63,7 +63,7 @@
             // Ajax请求downToken的Url，私有空间时使用,JS-SDK 将向该地址POST文件的key和domain,服务端返回的JSON必须包含`url`字段，`url`值为该文件的下载地址
             // unique_names: true,              // 默认 false，key 为文件名。若开启该选项，JS-SDK 会为每个文件自动生成key（文件名）
             // save_key: true,                  // 默认 false。若在服务端生成 uptoken 的上传策略中指定了 `save_key`，则开启，SDK在前端将不对key进行任何处理
-            domain: 'http://qiniu-plupload.qiniudn.com/', // bucket 域名，下载资源时用到，如：'http://xxx.bkt.clouddn.com/' **必需**
+            domain: 'pb4h5kp4l.bkt.clouddn.com/', // bucket 域名，下载资源时用到，如：'http://xxx.bkt.clouddn.com/' **必需**
             max_file_size: '40mb', // 最大文件体积限制
             dragdrop: true, // 开启可拖曳上传
             drop_element: 'yyy', // 拖曳上传区域元素的 ID，拖曳文件或文件夹后可触发上传
@@ -81,8 +81,8 @@
                     // 每个文件上传时,处理相关的事情
                     uploadStatus.textContent = '上传中'
                 },
+                // 文件上传成功之后 调用FileUploaded
                 'FileUploaded': function (up, file, info) {
-                    uploadStatus.textContent = '上传完成'
                     // 每个文件上传成功后,处理相关的事情
                     // 其中 info.response 是文件上传成功后，服务端返回的json，形式如
                     // {
@@ -91,9 +91,10 @@
                     //  }
                     // 参考http://developer.qiniu.com/docs/v6/api/overview/up/response/simple-response.html
 
-                    // var domain = up.getOption('domain');
-                    // var res = parseJSON(info.response);
-                    // var sourceLink = domain + res.key; 获取上传成功后的文件的Url
+                    var domain = up.getOption('domain');
+                    var response = JSON.parse(info.response);
+                    var sourceLink = 'http://' + domain + '/' + encodeURIComponent(response.key); //获取上传成功后的文件的Url
+                    uploadStatus.textContent = sourceLink + ' ' + response.key
                 },
                 'Error': function (up, err, errTip) {
                     //上传出错时,处理相关的事情
