--- a/src/admin.html
+++ b/src/admin.html
@@ -4,33 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <title>管理页面</title>
+    <link rel="stylesheet" href="./css/default.css">
 </head>
 
 <body>
+    <div class="page">
+        <aside>
+            <div class="newSong">
+                新建歌曲
+            </div>
+            <ul class="songList">
+                <li>歌曲1</li>
+                <li>歌曲2</li>
+                <li class="active">歌曲3</li>
+                <li>歌曲4</li>
+                <li>歌曲5</li>
+                <li>歌曲6</li>
+                <li>歌曲7</li>
+                <li>歌曲8</li>
+                <li>歌曲9</li>
+                <li>歌曲10</li>
+            </ul>
+            <div class="uploadArea">
+                <div id="uploadContainer" class="draggable">
+                    <div id="uploadButton" class="clickable">
+                        <p>点击或拖曳文件</p>
+                        <p>文件大小不能超过 40MB</p>
+                    </div>
+                </div>
+            </div>
+        </aside>
 
-    <style>
-      *{
-          margin: 0;
-          padding: 0;
-      }
-      #yyy{
-          padding: 50px 50px;
-          border-radius: 20px;
-          border: 2px dashed #ddd;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          width: 200px;
-      }
-    </style>
-
-    <div id="yyy">
-        <span id="xxx">点击或拖曳文件</span>
-        <p>文件大小不能超过 40MB</p>
+        <main>
+            <form class="form">
+                <div class="row">
+                    <label>
+                        歌名
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="row">
+                    <label>
+                        歌手
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="row">
+                    <label>
+                        外链
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="row">
+                    <buttom type="submit">保存</buttom>
+                </div>
+            </form>
+        </main>
     </div>
-    <div id="uploadStatus"></div>
-    <audio controls src="http://pb4h5kp4l.bkt.clouddn.com/%E8%83%A1%E5%BD%A6%E6%96%8C%20-%20%E4%BD%A0%E8%A6%81%E7%9A%84%E5%85%A8%E6%8B%BF%E8%B5%B0.mp3"></audio>
+
     <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
     <script>
         var APP_ID = 'yaD1gTskSn9vfELKX6LHv7eI-gzGzoHsz';
@@ -47,8 +78,8 @@
     <script>
         var uploader = Qiniu.uploader({
             runtimes: 'html5', // 上传模式,依次退化
-            browse_button: 'xxx', // 上传选择的点选按钮，**必需**
-            uptoken_url : 'http://localhost:8888/uptoken',
+            browse_button: 'uploadButton', // 上传选择的点选按钮，**必需**
+            uptoken_url: 'http://localhost:8888/uptoken',
             // 在初始化时，uptoken, uptoken_url, uptoken_func 三个参数中必须有一个被设置
             // 切如果提供了多个，其优先级为 uptoken > uptoken_url > uptoken_func
             // 其中 uptoken 是直接提供上传凭证，uptoken_url 是提供了获取上传凭证的地址，如果需要定制获取 uptoken 的过程则可以设置 uptoken_func
@@ -66,7 +97,7 @@
             domain: 'pb4h5kp4l.bkt.clouddn.com/', // bucket 域名，下载资源时用到，如：'http://xxx.bkt.clouddn.com/' **必需**
             max_file_size: '40mb', // 最大文件体积限制
             dragdrop: true, // 开启可拖曳上传
-            drop_element: 'yyy', // 拖曳上传区域元素的 ID，拖曳文件或文件夹后可触发上传
+            drop_element: 'uploadContainer', // 拖曳上传区域元素的 ID，拖曳文件或文件夹后可触发上传
             auto_start: true, // 选择文件后自动上传，若关闭需要自己绑定事件触发上传,
             init: {
                 'FilesAdded': function (up, files) {
