--- a/src/admin.html
+++ b/src/admin.html
@@ -25,25 +25,19 @@
         </aside>
 
         <main>
-            
+
         </main>
     </div>
 
     <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
-    <script>
-        var APP_ID = 'yaD1gTskSn9vfELKX6LHv7eI-gzGzoHsz';
-        var APP_KEY = 'xdMwCaV7u2MA2N4LM1YCqT4t';
+    <script src="./js/initializers/av.js"></script>
 
-        AV.init({
-            appId: APP_ID,
-            appKey: APP_KEY
-        });
-    </script>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../vendors/moxie.js"></script>
     <script src="../node_modules/plupload/js/plupload.min.js"></script>
     <script src="../node_modules/qiniu-js/dist/qiniu.min.js"></script>
 
+    <script src="./js/event-hub.js"></script>
     <script src="./js/song-form.js"></script>
     <script src="./js/new-song.js"></script>
     <script src="./js/song-list.js"></script>
