--- a/src/admin.html
+++ b/src/admin.html
@@ -17,8 +17,7 @@
             <div class="uploadArea">
                 <div id="uploadContainer" class="draggable">
                     <div id="uploadButton" class="clickable">
-                        <p>点击或拖曳文件</p>
-                        <p>文件大小不能超过 40MB</p>
+                        <p>新增歌曲</p>
                     </div>
                 </div>
             </div>
