--- a/src/index.html
+++ b/src/index.html
@@ -30,39 +30,39 @@
           <ol class="songs">
             <li>
               <div class="cover">
-                <img width=105 src="https://i.loli.net/2017/08/22/599ba7a0aea8b.jpg" alt="封面">
+                <img width=105 src="http://p1.music.126.net/vgd6txpq0uyfSxsIYnR88Q==/19087521858760216.jpg?param=140y140" alt="封面">
               </div>
-              <p>两行文字两行文字两行文字两行文字两行文字</p>
+              <p>一听就上瘾的欧美流行歌曲，开口就沦陷！</p>
             </li>
             <li>
               <div class="cover">
-                <img src="https://i.loli.net/2017/08/22/599ba7a0aea8b.jpg" alt="封面">
+                <img src="http://p1.music.126.net/bxKjPzDgEGO-Syp0q3iO-A==/3335918279600446.jpg?param=140y140" alt="封面">
               </div>
-              <p>两行文字两行文字两行文字两行文字</p>
+              <p>牛掰的人是这样拉小提琴的！</p>
             </li>
             <li>
               <div class="cover">
-                <img src="https://i.loli.net/2017/08/22/599ba7a0aea8b.jpg" alt="封面">
+                <img src="http://p1.music.126.net/UuWXpYGLZMu94lcLcisV1g==/109951163346174758.jpg?param=140y140" alt="封面">
               </div>
-              <p>两行文字两行文字两行文字两行文字</p>
+              <p>答案抖音版本</p>
             </li>
             <li>
               <div class="cover">
-                <img src="https://i.loli.net/2017/08/22/599ba7a0aea8b.jpg" alt="封面">
+                <img src="http://p1.music.126.net/X5aKTFkFves7yNOj2yC0Pg==/18953381439692936.jpg?param=140y140" alt="封面">
               </div>
-              <p>两行文字两行文字两行文字两行文字</p>
+              <p>Amy Winehouse的黑暗爵士</p>
             </li>
             <li>
               <div class="cover">
-                <img src="https://i.loli.net/2017/08/22/599ba7a0aea8b.jpg" alt="封面">
+                <img src="http://p1.music.126.net/InrRHVw1O4tFLxCa2GEqWg==/109951163322975638.jpg?param=140y140" alt="封面">
               </div>
-              <p>两行文字两行文字两行文字两行文字</p>
+              <p>结婚曲丨小哥哥 你准备好娶我了吗</p>
             </li>
             <li>
               <div class="cover">
-                <img src="https://i.loli.net/2017/08/22/599ba7a0aea8b.jpg" alt="封面">
+                <img src="http://p1.music.126.net/4lIALjphTzmfaf30-NvfAA==/109951163414896543.jpg?param=140y140" alt="封面">
               </div>
-              <p>两行文字两行文字两行文字两行文字</p>
+              <p>那些年，我们都不曾放弃过</p>
             </li>
           </ol>
         </section>
